# hw_aiohttp

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: api_test.http  database.py  main.py
src/models/: advertisement.py  base.py
src/utils/: generate_error.py  middlewares.py  validation.py
src/views/: advertisement.py
